// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changes status on value change 1`] = `
<Select
  autoFocus={false}
  defaultItem=""
  defaultRequired=""
  disabled={false}
  error={null}
  errorSubInfo={null}
  id="select"
  inputStyle="inline"
  isRequired={true}
  items={Array []}
  label="Select"
  labelHidden={false}
  name="select"
  onBlur={[Function]}
  onChange={null}
  onFocus={[Function]}
  options={
    Object {
      "option": "Option",
      "option-2": "Option 2",
      "option-3": "Option 3",
    }
  }
  query={Object {}}
  reference={[Function]}
  requiredLabel=""
  sort={null}
  title={null}
  value="option"
>
  <div
    className="formGroup inline selectContainer"
    id="select-container"
  >
    <Label
      classNames=""
      id="select"
      isTitle={false}
      labelHidden={false}
      value="Select"
    >
      <label
        className=" controlLabel "
        htmlFor="select"
      >
        Select
      </label>
    </Label>
    <div
      className="innerSelectContainer"
    >
      <select
        autoFocus={false}
        className="select formControl "
        disabled={false}
        id="select"
        name="select"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        value="option-2"
      >
        <option
          key="option"
          value="option"
        >
          Option
        </option>
        <option
          key="option-2"
          value="option-2"
        >
          Option 2
        </option>
        <option
          key="option-3"
          value="option-3"
        >
          Option 3
        </option>
      </select>
      <span
        className="selectCaret"
      >
        <svg
          viewBox="-248 252.9 13.4 9.1"
          x="0px"
          y="0px"
        >
          <path
            d="M-235,255.7l-5.9,5.8c-0.1,0.1-0.2,0.2-0.3,0.2c-0.1,0-0.3-0.1-0.4-0.2l-5.9-5.8c-0.1-0.2-0.1-0.3-0.1-0.4 c0-0.1,0-0.3,0.2-0.4l1.3-1.3c0.1-0.1,0.2-0.2,0.4-0.2s0.3,0.1,0.4,0.2l4.2,4.2l4.1-4.2c0.1-0.1,0.2-0.2,0.4-0.2 c0.1,0,0.3,0.1,0.4,0.2l1.2,1.3c0.1,0.1,0.2,0.2,0.2,0.4C-234.8,255.4-234.9,255.5-235,255.7z"
            fill="#20292D"
          />
        </svg>
      </span>
    </div>
  </div>
</Select>
`;

exports[`Renders Select with an array of items 1`] = `
<div
  className="formGroup inline selectContainer"
  id="select-container"
>
  
  <label
    className=" controlLabel "
    htmlFor="select"
  >
    Select
  </label>
  <div
    className="innerSelectContainer"
  >
    <select
      autoFocus={false}
      className="select formControl "
      disabled={false}
      id="select"
      name="select"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      value="option"
    >
      
      
      <option
        value="test-key"
      >
        test
      </option>
      <option
        value="test2-key"
      >
        test2
      </option>
      <option
        value="test3-key"
      >
        test3
      </option>
    </select>
    <span
      className="selectCaret"
    >
      <svg
        viewBox="-248 252.9 13.4 9.1"
        x="0px"
        y="0px"
      >
        <path
          d="M-235,255.7l-5.9,5.8c-0.1,0.1-0.2,0.2-0.3,0.2c-0.1,0-0.3-0.1-0.4-0.2l-5.9-5.8c-0.1-0.2-0.1-0.3-0.1-0.4 c0-0.1,0-0.3,0.2-0.4l1.3-1.3c0.1-0.1,0.2-0.2,0.4-0.2s0.3,0.1,0.4,0.2l4.2,4.2l4.1-4.2c0.1-0.1,0.2-0.2,0.4-0.2 c0.1,0,0.3,0.1,0.4,0.2l1.2,1.3c0.1,0.1,0.2,0.2,0.2,0.4C-234.8,255.4-234.9,255.5-235,255.7z"
          fill="#20292D"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Renders Select with an error message without crashing 1`] = `
<div
  className="formGroup inline selectContainer"
  id="select-container"
>
  
  <label
    className="controlLabelError controlLabel "
    htmlFor="select"
  >
    Select
  </label>
  <div
    className="innerSelectContainer"
  >
    <select
      autoFocus={false}
      className="select formControl formControlError"
      disabled={false}
      id="select"
      name="select"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      value="option"
    >
      
      
      <option
        value="option"
      >
        Option
      </option>
      <option
        value="option-2"
      >
        Option 2
      </option>
      <option
        value="option-3"
      >
        Option 3
      </option>
    </select>
    <span
      className="errorContainer"
      id={null}
    >
      <strong
        className="errorInfo"
      >
        An Error
      </strong>
      with useful hints
    </span>
    <span
      className="selectCaret"
    >
      <svg
        viewBox="-248 252.9 13.4 9.1"
        x="0px"
        y="0px"
      >
        <path
          d="M-235,255.7l-5.9,5.8c-0.1,0.1-0.2,0.2-0.3,0.2c-0.1,0-0.3-0.1-0.4-0.2l-5.9-5.8c-0.1-0.2-0.1-0.3-0.1-0.4 c0-0.1,0-0.3,0.2-0.4l1.3-1.3c0.1-0.1,0.2-0.2,0.4-0.2s0.3,0.1,0.4,0.2l4.2,4.2l4.1-4.2c0.1-0.1,0.2-0.2,0.4-0.2 c0.1,0,0.3,0.1,0.4,0.2l1.2,1.3c0.1,0.1,0.2,0.2,0.2,0.4C-234.8,255.4-234.9,255.5-235,255.7z"
          fill="#20292D"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Renders Select without crashing 1`] = `
<div
  className="formGroup inline selectContainer"
  id="select-container"
>
  
  <label
    className=" controlLabel "
    htmlFor="select"
  >
    Select
  </label>
  <div
    className="innerSelectContainer"
  >
    <select
      autoFocus={false}
      className="select formControl "
      disabled={false}
      id="select"
      name="select"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      value="option"
    >
      
      
      <option
        value="option"
      >
        Option
      </option>
      <option
        value="option-2"
      >
        Option 2
      </option>
      <option
        value="option-3"
      >
        Option 3
      </option>
    </select>
    <span
      className="selectCaret"
    >
      <svg
        viewBox="-248 252.9 13.4 9.1"
        x="0px"
        y="0px"
      >
        <path
          d="M-235,255.7l-5.9,5.8c-0.1,0.1-0.2,0.2-0.3,0.2c-0.1,0-0.3-0.1-0.4-0.2l-5.9-5.8c-0.1-0.2-0.1-0.3-0.1-0.4 c0-0.1,0-0.3,0.2-0.4l1.3-1.3c0.1-0.1,0.2-0.2,0.4-0.2s0.3,0.1,0.4,0.2l4.2,4.2l4.1-4.2c0.1-0.1,0.2-0.2,0.4-0.2 c0.1,0,0.3,0.1,0.4,0.2l1.2,1.3c0.1,0.1,0.2,0.2,0.2,0.4C-234.8,255.4-234.9,255.5-235,255.7z"
          fill="#20292D"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Renders deprecated select without crashing 1`] = `
<div
  className="formGroup inline selectContainer"
  id="select-container"
>
  
  <label
    className=" controlLabel "
    htmlFor="select"
  >
    Select
  </label>
  <div
    className="innerSelectContainer"
  >
    <select
      autoFocus={false}
      className="select formControl "
      disabled={false}
      id="select"
      name="select"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      value="option"
    >
      
      
      <option
        value="option"
      >
        Option
      </option>
      <option
        value="option-2"
      >
        Option 2
      </option>
      <option
        value="option-3"
      >
        Option 3
      </option>
    </select>
    <span
      className="selectCaret"
    >
      <svg
        viewBox="-248 252.9 13.4 9.1"
        x="0px"
        y="0px"
      >
        <path
          d="M-235,255.7l-5.9,5.8c-0.1,0.1-0.2,0.2-0.3,0.2c-0.1,0-0.3-0.1-0.4-0.2l-5.9-5.8c-0.1-0.2-0.1-0.3-0.1-0.4 c0-0.1,0-0.3,0.2-0.4l1.3-1.3c0.1-0.1,0.2-0.2,0.4-0.2s0.3,0.1,0.4,0.2l4.2,4.2l4.1-4.2c0.1-0.1,0.2-0.2,0.4-0.2 c0.1,0,0.3,0.1,0.4,0.2l1.2,1.3c0.1,0.1,0.2,0.2,0.2,0.4C-234.8,255.4-234.9,255.5-235,255.7z"
          fill="#20292D"
        />
      </svg>
    </span>
  </div>
</div>
`;
